Fixed z-index issue on .section-title on mobile device

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -607,6 +607,7 @@ section,
   text-align: center;
   // padding-bottom: 60px;
   position: relative;
+  z-index: 1;
 
   span {
     position: absolute;
